@startuml
'https://plantuml.com/class-diagram

left to right direction

hide circle
'hide method

package DomainModel {

    class Family {
        int id
        String name
    }

    class Member {
        int id
        String? name
        LocalDate? birthday
    }
    note bottom of Member
        attribute は今のところ使用予定がないので nullable
    end note

    class Expense {
        int id
        Category Category
        Member member
'        attachmentId
        String name
        int price
        String? memo
        LocalDate date
        Repeatable? frequency
    }
    note bottom of Expense
        repeatable が true のものは frequency を持つ
    end note

    class Repeatable {
        int month
        int count
    }
    note bottom of Repeatable
        ・1ヶ月に1回だと `month:1, count:1` となる
        ・1週間に1回だと `month:1, count:4` となる
    end note

' 添付ファイルに固有の情報を持たせるかは検討
'    class attachment {
'        id
'        content
'    }

    class Category {
        int id
        String name
        int rank
    }

    class Bookmark {
        int id
        Expense expense
    }

    ' https://plantuml.com/ja/class-diagram#fbbc0504d940020e
    Member "0..*" -- "0..1" Family
    Expense "0..*" -- "1" Member
    Category "1" -- "1..*" Expense
    Bookmark "0..1" -- "1" Expense
    Repeatable "0..1" -- "1" Expense
}

@enduml